<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liaodongxiaoxiao.deviceid.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_imei"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/imei_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            tools:text="11111" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_pseudo_unique_id"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pseudo_unique_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            tools:text="11111" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_android_id"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/android_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            tools:text="11111" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_wlan_mac_address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wlan_mac_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            tools:text="11111" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_bt_mac_address"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bt_mac_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            tools:text="11111" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
